Update
Spremembe:
- jakost mikrofona iz 50 na 90
- soba nima table zraven klepeta
- logo je odstranjen
- veliki snemalni gumb rdeče barve
- statusni gumb zelene barve bolj viden